--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView android:text="Happy Birthday Eddy" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="Happy Birthday Eddy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        />
     <TextView android:text="From: Karol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:textSize="24dp"
         />
     <ImageView
         android:src="@drawable/androidparty"
